fix: spacing

--- a/stats-preview-card-component/styles.css
+++ b/stats-preview-card-component/styles.css
@@ -185,19 +185,21 @@ body {
     }
 
 
-    .card__content{
+    .card__content {
         order: 1;
-         margin: 4.375rem;
+        margin: 4.75rem 3rem;
         text-align: left;
     }
 
     .card__header {
-        font-size: 2rem;
+        font-size: 2.25rem;
+        font-family: var(--ff-base);
     }
 
     .grid-box {
         grid-template-columns: 1fr 1fr 1fr;
         margin-top: 2.75rem;
+        gap: 1rem;
 
     }
 
@@ -211,7 +213,6 @@ body {
         object-fit: cover;
     }
 }
-
 
 
 .attribution {
